# medical_sensor_gateway

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: embedded_cicd.md  gateway.md
embedded_cicd_pipeline/: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  docker-compose.yml  doxygen.cfg
embedded_cicd_pipeline/include/app/: ProcessingLoop.h
embedded_cicd_pipeline/include/hal/: IMotorHAL.h  SimulatedMotorHAL.h
embedded_cicd_pipeline/include/pid/: PIDController.h
embedded_cicd_pipeline/scripts/: check_complexity.sh  generate_ci_summary.py  generate_coverage_report.sh  run_cppcheck.sh
embedded_cicd_pipeline/src/: main.cpp
embedded_cicd_pipeline/src/app/: ProcessingLoop.cpp
embedded_cicd_pipeline/src/hal/: SimulatedMotorHAL.cpp
embedded_cicd_pipeline/src/pid/: PIDController.cpp
embedded_cicd_pipeline/tests/integration/: test_processing_loop.cpp
embedded_cicd_pipeline/tests/unit/: test_motor_hal.cpp  test_pid_controller.cpp
python/: conftest.py  test_fault_injection.py
src/: AlarmPublisher.cpp  AlarmPublisher.h  ButterworthFilter.cpp  ButterworthFilter.h  ECGSensor.cpp  ECGSensor.h  FlowSensor.cpp  FlowSensor.h  ISensor.h  MedicalFsm.cpp  MedicalFsm.h  SensorGateway.cpp  SensorGateway.h  main.cpp
tests/: test_gateway.cpp
